# calculator

./: .copier-answers.yml  README.md  pyproject.toml
playground/calculator/: calculator.py
playground/calculator/artifacts/: application.json  approval.teal  contract.json
